src/snapshots/rlox__test_runtime__assign_parens.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a;\n        print 1 * (a = 2);  \n        \")"
---
stdout:


stderr:
Error: 
   ╭─[<unknown>:2:12]
   │
 3 │         print 1 * (a = 2);
   │                      ┬  
   │                      ╰── Invalid assignment at this expression depth
───╯


